[package]
name = "garazyk-ptyd"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR CC0-1.0"
publish = false

[[bin]]
name = "garazyk-ptyd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
